logs/Slang/generated/hdlconv/hdlconvertor_p134.sv.log
name: hdlconvertor_p134
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p134.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p134.sv:1:1: error: language feature not yet supported
class Packet ;
^~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p134.sv:15:13: error: expected identifier
    function new();
            ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p134.sv:15:14: error: expected statement
    function new();
             ^~~
